添加model 校验